# scripts_cemrg_4ch

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_multiplatform  Dockerfile_plain  README  README.md  README_MRI  README_MRI.md  __init__.py  create_cylinders.py  create_myo.py  create_valve_planes.py  img.py  imports.txt  labels.json  postSlicer_optimised.py  pyproject.toml  reqs.txt  run_all_old_process.sh  run_all_refact.sh  svc_ivc.py  test.py  thickness.json  txt_2_json.py  vein_cutoff.json
UVCs/: all_surf2vtk.py  extract_bivmesh_uvc.sh  extract_la.sh  extract_ra.sh  pick_apex_only.sh  remove_sept.py  runUVC.sh  runUVC_la.sh  runUVC_ra.sh  surf2vtx.py  surface_mapping.py  surfaces_extraction_fibres_la.sh  surfaces_extraction_fibres_ra.sh  surfaces_extraction_uvc.sh
docker/: README.md  entrypoint.py  entrypoint_refact.py
fibres/: fibres_rosie.sh
h_template/: raa_apex.txt
meshing/: MeshProcessingParameters.py  MeshingParameters.py  generate_heart_mesh_Cesare.sh  generic_relabel.py  get_meshing_parfile.py  get_model_creation_params.py  harry_mesh_post.sh  harry_relabel_mesh.py  heart_mesh_data_file  meshQual.py  mesh_post.sh  mesh_postprocessing.py  meshing.py  relabel_mesh.py  relabel_mesh_MRI.py
pipeline/: pre_sim pipeline notes.docx
pipeline/atrial_fibres/: 0_create_surfaces_endo_landmarks.sh  pyproject.toml
pipeline/atrial_fibres/parfiles/: input_tags_setup.json  input_tags_setup_cristobal.json  input_tags_setup_inverted_pvs.json  input_tags_setup_pv.json  input_tags_setup_rosie2.json
pipeline/atrial_fibres/py_atrial_fibres/: file_utils.py  linalg_utils.py  mesh_utils.py  simulation_utils.py
pipeline/atrial_fibres/py_atrial_fibres.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pipeline/vent_fibres/: 0_extract_surfs.sh  main_surfs.py  pyproject.toml
pipeline/vent_fibres/parfiles/: seg_tags_setup.json
pipeline/vent_fibres/py_vent_fibres/: file_utils.py  mesh_utils.py
pipeline/vent_fibres/py_vent_fibres.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pre_sim/: 10_split_fec.py  1_define_tags.py  2_extract_peri_surface.sh  3_surfaces_manipulation.py  5_surf2vtx.py  (+19 more)
(+137 files in other folders)
