[tool.poetry]
name = "scripts-cemrg-4ch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "scripts_cemrg_4ch"}]

[tool.poetry.dependencies]
python = "^3.9"
vtk = "^9.2.6"
scipy = "^1.9"
SimpleITK = "^2.2.1"
h5py = "^3.9.0"
img = "^2.5"
joblib = "^1.3.2"
matplotlib = "^3.7.2"
meshio = "^5.3.4"
pynrrd = "^1.0.0"
pandas = "^2.0.3"
pydicom = "^2.4.2"
pygeodesic = "^0.1.8"
pylab-sdk = "^1.3.2"
pyvista = "^0.41.1"
sets = "^0.3.2"
tqdm = "^4.66.0"
trimesh = "^3.23.1"
numpy = "^1.25.2"
nibabel = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
