[project]
name = "py_vent_fibres"
version = "0.0.1"
requires-python = "~=3.9"

dependencies = ["numpy~=1.24.2",
				"meshio~=5.3.4",
				"pyvista~=0.38.5",
				"vtk~=9.2.6",
				"trimesh~=3.21.4",
				"scipy~=1.10.1",
				"tqdm~=4.65.0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["/README.md",
	       "par*",
	       "/build",
	       "/py_vent_fibres.egg-info",
	       "/.git"]